# ipa

./: Cargo.toml  pre-commit
.github/workflows/: check.yml
in-market-test/: run_queries.sh
ipa-core/: Cargo.toml
ipa-core/benches/oneshot/: ipa.rs
ipa-macros/: Cargo.toml
ipa-macros/src/: lib.rs  tree.rs
ipa-macros/src/derive_step/: mod.rs
ipa-tests/: Cargo.toml
ipa-tests/tests/: helper_networks.rs
scripts/: collect_steps.py
src/: app.rs
src/helpers/: error.rs  mod.rs  prss_protocol.rs
src/helpers/buffers/: mod.rs
src/helpers/gateway/: mod.rs  receive.rs  send.rs  transport.rs
src/helpers/transport/: mod.rs  query.rs  receive.rs  stream.rs
src/net/: http_serde.rs  test.rs  transport.rs
src/net/client/: mod.rs
src/net/server/: mod.rs
src/protocol/: malicious.rs  step.rs
src/protocol/attribution/: accumulate_credit.rs  aggregate_credit.rs  apply_attribution_window.rs  credit_capping.rs  input.rs  malicious.rs  mod.rs  secure_credit_capping.rs  semi_honest.rs
src/protocol/basics/: check_zero.rs  if_else.rs  mod.rs  reshare.rs  reveal.rs  share_known_value.rs
src/protocol/boolean/: add_constant.rs  bit_decomposition.rs  bitwise_equal.rs  bitwise_less_than_prime.rs  comparison.rs  mod.rs  or.rs  random_bits_generator.rs  solved_bits.rs  xor.rs
src/protocol/context/: malicious.rs  mod.rs  prss.rs  semi_honest.rs  upgrade.rs  validator.rs
src/protocol/ipa/: mod.rs
src/protocol/modulus_conversion/: convert_shares.rs
src/protocol/prss/: mod.rs
src/query/: executor.rs  processor.rs
src/telemetry/: stats.rs
src/test_fixture/: app.rs  circuit.rs  ipa.rs  mod.rs  world.rs
(+34 files in other folders)
