[package]
name = "ipa-tests"
version = "0.1.0"
rust-version = "1.64.0"
edition = "2021"

[dependencies]
ipa-core = { path = "../ipa-core", default-features = false, features = [
    "cli",
    "web-app",
    "real-world-infra",
    "test-fixture",
    "weak-field",
] }
rand = "0.8"
rand_core = "0.6"
clap = { version = "4.3.2", features = ["derive"] }
hyper = { version = "0.14.26", features = [
    "client",
    "h2",
    "stream",
    "runtime",
] }
comfy-table = { version = "7.0" }
tokio = { version = "1.28", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
generic-array = "1.0.0"
serde_json = { version = "1.0" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5.0"

[dev-dependencies]
command-fds = "0.2.2"
tempfile = "3"

[[bin]]
name = "helper"
bench = false

[[bin]]
name = "report_collector"
bench = false

[[bin]]
name = "test_mpc"
bench = false

[[test]]
name = "helper_networks"
required-features = ["ipa-core/descriptive-gate"]

[[test]]
name = "compact_gate"
required-features = ["ipa-core/compact-gate"]
